--- a/server/templates/timeline.html
+++ b/server/templates/timeline.html
@@ -12,6 +12,13 @@
     input {
       margin: 2px 0;
     }
+
+   table {
+    display: table;
+    border-collapse: separate;
+    border-spacing: 2px;
+    border-color: gray;
+}
   </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
@@ -29,7 +36,9 @@
 <div id="visualization"></div>
 
 <h4 id="state"></h4>
-<ul id="myList"></ul>
+<table id="myList" border = "1" cellpadding = "5" cellspacing = "5"></table>
+
+</table>
 <script>
   // create a dataset with items
   // we specify the type of the fields `start` and `end` here to be strings
@@ -81,12 +90,23 @@ timeline.on('select', function (properties) {
   title.innerText=selectedState.content;
 
   myList=document.getElementById("myList");
-  myList.innerText=""
+  myList.innerHTML=`
+<tr>
+<th>Name</th>
+<th>Scale</th>
+</tr>`
   selectedState.services.forEach(element => {
     
-  var entry = document.createElement('li');
-  entry.appendChild(document.createTextNode(element.Name+" : "+element.Scale));
-  myList.appendChild(entry);
+
+  var row = myList.insertRow(1);
+
+// Insert new cells (<td> elements) at the 1st and 2nd position of the "new" <tr> element:
+var cell1 = row.insertCell(0);
+var cell2 = row.insertCell(1);
+
+// Add some text to the new cells:
+cell1.innerHTML = element.Name;
+cell2.innerHTML = element.Scale;
   });
 
 });
